# gitstudy_freertos

./: .clangd  .codex_write_test.txt  .gitignore  CMakeLists.txt  README.md  app_assert.c  compile_commands.json  dev1.txt  main.c  main_dev1.txt  main_side.txt  rebase_test_1.txt  run_stdout.txt  test.txt
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_mingw/freertos_kernel_build/: Makefile  cmake_install.cmake
build_mingw/freertos_kernel_build/include/: Makefile  cmake_install.cmake
build_mingw/freertos_kernel_build/portable/: Makefile  cmake_install.cmake
build_vs/: CMakeCache.txt
include/: FreeRTOSConfig.h
tools/: build_freertos_daily_report.py  build_freertos_daily_report_20260716.py  build_freertos_daily_report_20260717.py  build_freertos_daily_report_20260720.py  build_freertos_summary_doc.py  build_freertos_timer_notes.py  build_freertos_total_study_notes.py  render_docx_fixed_profile.py
